--- a/1-Basic Alogrithm/8.HighLevel.ipynb
+++ b/1-Basic Alogrithm/8.HighLevel.ipynb
@@ -554,7 +554,7 @@
    "id": "c291ab87-9c75-4e89-a6d4-3ec0b8bb615d",
    "metadata": {},
    "source": [
-    "# 9 3sum-closest\n",
+    "# 10 16 3sum-closest\n",
     "https://leetcode.cn/problems/3sum-closest/description/"
    ]
   },
@@ -650,6 +650,255 @@
     "ans = Solution()\n",
     "ans.threeSumClosest(nums, target)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "445cf8a5-53a2-420a-a006-b3e8e8ad4ca9",
+   "metadata": {},
+   "source": [
+    "# 11.  29. 两数相除\n",
+    "https://leetcode.cn/problems/divide-two-integers/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 349,
+   "id": "48f9e80c-6150-48c1-bbb9-619d5bedd756",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2147483648"
+      ]
+     },
+     "execution_count": 349,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "class Solution:\n",
+    "    def divide(self, dividend, divisor):\n",
+    "        res = math.trunc(dividend / divisor)\n",
+    "        if res > 2147483647:\n",
+    "            return 2147483647\n",
+    "        else: \n",
+    "            return res\n",
+    "        \n",
+    "dividend = -2147483648\n",
+    "divisor = -1 #2147483647\n",
+    "ans = Solution()\n",
+    "ans.divide(dividend, divisor)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9b68949-76e6-42dd-8d0c-4c05c7c17e65",
+   "metadata": {},
+   "source": [
+    "# 12. 43. 字符串相乘\n",
+    "https://leetcode.cn/problems/multiply-strings/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bee41b56-25f1-4d32-84fe-16660569b10f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def multiply(self, num1: str, num2: str) -> str:\n",
+    "        return str(int(num1) * int(num2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77ce4e11-e695-4266-9cd2-29d6a6934ca3",
+   "metadata": {},
+   "source": [
+    "# 13. 80. 删除有序数组中的重复项 II\n",
+    "https://leetcode.cn/problems/remove-duplicates-from-sorted-array-ii/description/?envType=study-plan-v2&envId=top-interview-150"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 351,
+   "id": "eb72a56c-711b-4856-ae1a-1cf0b0b785ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 351,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def removeDuplicates(self, nums):\n",
+    "        j = 0\n",
+    "        q = {}\n",
+    "        while j < len(nums):\n",
+    "            i = nums[j]\n",
+    "            if i not in q:\n",
+    "                q[i] = 1\n",
+    "                j += 1\n",
+    "            elif i in q  and q[i] == 1:\n",
+    "                q[i] += 1\n",
+    "                j += 1\n",
+    "            elif i in q and q[i] ==2:\n",
+    "                nums.pop(j)\n",
+    "        return len(nums)\n",
+    "\n",
+    "nums = [0,0,1,1,1,1,2,3,3]\n",
+    "nums = [1,1,1,2,2,3]\n",
+    "ans = Solution()\n",
+    "ans.removeDuplicates(nums)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02445e95-91ff-4856-95a2-256ac41cf290",
+   "metadata": {},
+   "source": [
+    "# 14 189. 轮转数组\n",
+    "https://leetcode.cn/problems/rotate-array/description/?envType=study-plan-v2&envId=top-interview-150"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 392,
+   "id": "934d4571-6ea1-45cf-b45d-89f5b35aea35",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 99, -1, -100]"
+      ]
+     },
+     "execution_count": 392,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def rotate(self, nums, k):\n",
+    "        n = len(nums)\n",
+    "        k1 = k % n\n",
+    "        for i in range(k1):\n",
+    "            a= nums.pop()\n",
+    "            nums.insert(0, a)\n",
+    "        return nums\n",
+    "        \n",
+    "        \n",
+    "#nums = [1,2,3,4,5,6,7]\n",
+    "#k = 3\n",
+    "nums = [-1,-100,3,99]\n",
+    "k = 2\n",
+    "ans = Solution()\n",
+    "ans.rotate(nums, k)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b194bfe-03ed-4f7f-bd87-0646d78b0d43",
+   "metadata": {},
+   "source": [
+    "# 15 274. H 指数\n",
+    "https://leetcode.cn/problems/h-index/description/?envType=study-plan-v2&envId=top-interview-150"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 408,
+   "id": "50fae6ee-a146-4e9e-9dcd-a44fb2d0e1c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 408,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def hIndex(self, citations):\n",
+    "        n = len(citations)\n",
+    "        database = {}\n",
+    "        for i in range(n, 0, -1):\n",
+    "            s = [j >= i for j in citations]\n",
+    "            if sum(s) >= i:\n",
+    "                return i\n",
+    "        return 0\n",
+    "        \n",
+    "\n",
+    "citations = [3,0,6,1,5]\n",
+    "citations = [1,3,1]\n",
+    "ans = Solution()\n",
+    "ans.hIndex(citations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "731ff0b1-3068-4e01-9211-498c7af9cdd2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "https://leetcode.cn/problems/h-index/description/?envType=study-plan-v2&envId=top-interview-150"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e19b493-af0a-4de9-bfb7-6f9404b0a0ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "https://leetcode.cn/problems/jump-game/description/?envType=study-plan-v2&envId=top-interview-150"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5e21a47-4b43-48f1-b89a-0d786fe59ffb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "https://leetcode.cn/problems/jump-game-ii/description/?envType=study-plan-v2&envId=top-interview-150"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cce0a25a-f313-4669-8e65-3c3305a9ce22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "https://leetcode.cn/problems/best-time-to-buy-and-sell-stock-ii/description/?envType=study-plan-v2&envId=top-interview-150"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11c21db5-69e0-4d1f-a834-7653ea9277f2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
