--- a/1-Basic Alogrithm/8.HighLevel.ipynb
+++ b/1-Basic Alogrithm/8.HighLevel.ipynb
@@ -853,13 +853,543 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "de6b48c9-799f-4c84-a049-43b3b2627f84",
+   "metadata": {},
+   "source": [
+    "# 16. 172. 阶乘后的零\n",
+    "\n",
+    "https://leetcode.cn/problems/factorial-trailing-zeroes/?envType=study-plan-v2&envId=top-interview-150"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 418,
+   "id": "ddea6706-db8a-4097-8eb6-e9e1f7a1623e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "390"
+      ]
+     },
+     "execution_count": 418,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def trailingZeroes(self, n):\n",
+    "        res = 0\n",
+    "        while n:\n",
+    "            n //=5\n",
+    "            res +=n\n",
+    "        return res\n",
+    "\n",
+    "n = 1574\n",
+    "ans = Solution()\n",
+    "ans.trailingZeroes(n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32da14db-73c3-4b22-855c-ba1f1906f781",
+   "metadata": {},
+   "source": [
+    "# 17  137. 只出现一次的数字 II\n",
+    "\n",
+    "https://leetcode.cn/problems/single-number-ii/description/?envType=study-plan-v2&envId=top-interview-150"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 419,
+   "id": "a1a0bee0-aa59-400a-9b99-f7f1d1841c61",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 419,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "class Solution:\n",
+    "    def singleNumber(self, nums):\n",
+    "        res = Counter(nums)\n",
+    "        for i in res:\n",
+    "            if res[i] == 1:\n",
+    "                return i\n",
+    "        \n",
+    "nums = [2,2,3,2]\n",
+    "ans = Solution()\n",
+    "ans.singleNumber(nums)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9bdca297-4c40-4d5d-b4af-ab1649b5f55d",
+   "metadata": {},
+   "source": [
+    "# 18 215. 数组中的第K个最大元素\n",
+    "https://leetcode.cn/problems/kth-largest-element-in-an-array/description/?envType=study-plan-v2&envId=top-interview-150"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 446,
+   "id": "2effdce4-5be4-4bf3-9149-806215aea92f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 446,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def findKthLargest(self, nums, k):\n",
+    "        nums.sort()\n",
+    "        return nums[-k]\n",
+    "\n",
+    "nums = [3,2,3,1,2,4,5,5,6]\n",
+    "k = 4\n",
+    "ans = Solution()\n",
+    "ans.findKthLargest(nums, k)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4d6dc7b-1387-4811-8a97-485ac56bfb54",
+   "metadata": {},
+   "source": [
+    "# 19  373. 查找和最小的 K 对数字\n",
+    "https://leetcode.cn/problems/find-k-pairs-with-smallest-sums/?envType=study-plan-v2&envId=top-interview-150"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 462,
+   "id": "a0ff2f68-6dd8-4744-bbc7-dc661cc6f4d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 2], [1, 4], [1, 6]]"
+      ]
+     },
+     "execution_count": 462,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def kSmallestPairs(self, nums1, nums2, k):\n",
+    "        s = []\n",
+    "        for i in nums1:\n",
+    "            for j in nums2:\n",
+    "                s.append((i + j, i, j))\n",
+    "        s.sort()\n",
+    "        return [[i[1], i[2]] for i in s[:k]] \n",
+    "        \n",
+    "nums1 = [1,7,11]\n",
+    "nums2 = [2,4,6]\n",
+    "k = 3\n",
+    "ans = Solution()\n",
+    "ans.kSmallestPairs(nums1, nums2, k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 473,
+   "id": "2900fc6e-989c-41b2-b930-a2bed72b03fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 6], [1, 2], [1, 4]]"
+      ]
+     },
+     "execution_count": 473,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import heapq\n",
+    "class Solution:\n",
+    "    def kSmallestPairs(self, nums1, nums2, k):\n",
+    "        s = []\n",
+    "        for i in nums1[:k]:\n",
+    "            for j in nums2[:k]:\n",
+    "                heapq.heappush(s, (-i -j, i, j))\n",
+    "                if len(s) >k:\n",
+    "                    heapq.heappop(s)\n",
+    "        return [[i[1], i[2]] for i in s] \n",
+    "        \n",
+    "nums1 = [1,7,11]\n",
+    "nums2 = [2,4,6]\n",
+    "k = 3\n",
+    "ans = Solution()\n",
+    "ans.kSmallestPairs(nums1, nums2, k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 481,
+   "id": "5825233f-1d78-4aae-b604-f4492c8a3f83",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 2], [1, 4], [1, 6]]"
+      ]
+     },
+     "execution_count": 481,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def kSmallestPairs(self, nums1, nums2, k):\n",
+    "        m, n = len(nums1), len(nums2)\n",
+    "        heap, res  = [] , []\n",
+    "        vis = set()\n",
+    "        heapq.heappush(heap, [nums1[0] + nums2[0], 0, 0])\n",
+    "\n",
+    "        while heap and len(res) <=k:\n",
+    "            _, i, j = heapq.heappop(heap)\n",
+    "            if (i,j) in vis:\n",
+    "                continue\n",
+    "            vis.add((i,j))\n",
+    "            res.append([nums1[i], nums2[j]])\n",
+    "            if len(res) == k:\n",
+    "                break\n",
+    "            if i +1 < m:\n",
+    "                heapq.heappush(heap, [nums1[i + 1] + nums2[j], i + 1, j])\n",
+    "            if j +1 < n:\n",
+    "                heapq.heappush(heap, [nums1[i] + nums2[j + 1], i, j+ 1])\n",
+    "        return res\n",
+    "                \n",
+    "            \n",
+    "nums1 = [1,7,11]\n",
+    "nums2 = [2,4,6]\n",
+    "k = 3\n",
+    "ans = Solution()\n",
+    "ans.kSmallestPairs(nums1, nums2, k)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc98a1cc-7ba8-4503-9966-b650d4df3271",
+   "metadata": {},
+   "source": [
+    "# 20 74. 搜索二维矩阵\n",
+    "https://leetcode.cn/problems/search-a-2d-matrix/description/?envType=study-plan-v2&envId=top-interview-150 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 486,
+   "id": "ab1d1a75-1a33-44de-8523-f91e5f2e9b70",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 486,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "class Solution:\n",
+    "    def searchMatrix(self, matrix, target):\n",
+    "        s = np.array(matrix).flatten()\n",
+    "        return target in s\n",
+    "\n",
+    "matrix = [[1,3,5,7],[10,11,16,20],[23,30,34,60]]\n",
+    "target = 3\n",
+    "ans = Solution()\n",
+    "ans.searchMatrix(matrix, target)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3522b9cd-aafa-44c2-b808-5ab6de14133b",
+   "metadata": {},
+   "source": [
+    "# 21 162. 寻找峰值\n",
+    "https://leetcode.cn/problems/find-peak-element/description/?envType=study-plan-v2&envId=top-interview-150"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 489,
+   "id": "e8c401e4-482a-4830-842f-75cd3f54b914",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 489,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def findPeakElement(self, nums):\n",
+    "        return nums.index(max(nums))\n",
+    "\n",
+    "nums = [1,2,3,1]\n",
+    "ans = Solution()\n",
+    "ans.findPeakElement(nums)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "016a7f68-12da-4d86-aeac-463fda6276e1",
+   "metadata": {},
+   "source": [
+    "# 23 33. 搜索旋转排序数组\n",
+    "https://leetcode.cn/problems/search-in-rotated-sorted-array/description/?envType=study-plan-v2&envId=top-interview-150"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 493,
+   "id": "2aba0017-23ae-42fb-a680-ac8e9cc78916",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 493,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def search(self, nums, target):\n",
+    "        if target in nums:\n",
+    "            return nums.index(target)\n",
+    "        else: \n",
+    "            return -1\n",
+    "\n",
+    "nums = [4,5,6,7,0,1,2]\n",
+    "target = 0\n",
+    "ans = Solution()\n",
+    "ans.search(nums, target)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2ec61f9-78e9-4b1f-84f8-4cc007b4a227",
+   "metadata": {},
+   "source": [
+    "# 24  34. 在排序数组中查找元素的第一个和最后一个位置\n",
+    "\n",
+    "https://leetcode.cn/problems/find-first-and-last-position-of-element-in-sorted-array/description/?envType=study-plan-v2&envId=top-interview-150"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 514,
+   "id": "b523c947-560f-4231-818e-b3afe3b549ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 0]"
+      ]
+     },
+     "execution_count": 514,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def searchRange(self, nums, target):\n",
+    "        res = []\n",
+    "        n = len(nums)\n",
+    "        for i in range(n):\n",
+    "            if nums[i] == target:\n",
+    "                res.append(i)\n",
+    "                break\n",
+    "        if not res:\n",
+    "            return [-1, -1]\n",
+    "        for i in range(n -1 , 0, -1):\n",
+    "            if nums[i] == target:\n",
+    "                res.append(i)\n",
+    "                break\n",
+    "        if len(res) == 1:\n",
+    "            return [0, 0]\n",
+    "        return res\n",
+    "            \n",
+    "        \n",
+    "nums = [1]\n",
+    "target = 1\n",
+    "ans = Solution()\n",
+    "ans.searchRange(nums, target)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3e6ba32-480c-4ca0-84d3-e7f82b4add07",
+   "metadata": {},
+   "source": [
+    "# 23 53. 最大子数组和\n",
+    "https://leetcode.cn/problems/maximum-subarray/description/?envType=study-plan-v2&envId=top-interview-150"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 521,
+   "id": "1e2af20f-2c2a-48d6-8220-57d34b359ccb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 521,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def maxSubArray(self, nums):\n",
+    "        for i in range(1, len(nums)):\n",
+    "            nums[i] = max(nums[i] + nums[i - 1], nums[i])\n",
+    "        return max(nums)\n",
+    "        \n",
+    "nums = [-2,1,-3,4,-1,2,1,-5,4]\n",
+    "ans = Solution()\n",
+    "ans.maxSubArray(nums)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09dc9cd5-34ed-43a2-adb5-c9fde6dd176f",
+   "metadata": {},
+   "source": [
+    "# 25 153. 寻找旋转排序数组中的最小值\n",
+    "https://leetcode.cn/problems/find-minimum-in-rotated-sorted-array/description/?envType=study-plan-v2&envId=top-interview-150"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 517,
+   "id": "91bcede8-4cd8-45da-9454-b5703c6774c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 517,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def findMin(self, nums):\n",
+    "        return min(nums)\n",
+    "\n",
+    "nums = [3,4,5,1,2]\n",
+    "ans = Solution()\n",
+    "ans.findMin(nums)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "731ff0b1-3068-4e01-9211-498c7af9cdd2",
+   "id": "7f7c104b-357b-4d55-a3ce-8779554a5db5",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b0a7588-8fe9-4561-bd77-dc0ed31a4f0e",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "https://leetcode.cn/problems/h-index/description/?envType=study-plan-v2&envId=top-interview-150"
+    "201. 数字范围按位与\n",
+    "https://leetcode.cn/problems/bitwise-and-of-numbers-range/description/?envType=study-plan-v2&envId=top-interview-150"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 441,
+   "id": "40e8db9b-6ae5-41ad-833b-42173406c633",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[441], line 11\u001b[0m\n\u001b[1;32m      9\u001b[0m right \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2147483647\u001b[39m\n\u001b[1;32m     10\u001b[0m ans \u001b[38;5;241m=\u001b[39m Solution()\n\u001b[0;32m---> 11\u001b[0m \u001b[43mans\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrangeBitwiseAnd\u001b[49m\u001b[43m(\u001b[49m\u001b[43mleft\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mright\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[441], line 5\u001b[0m, in \u001b[0;36mSolution.rangeBitwiseAnd\u001b[0;34m(self, left, right)\u001b[0m\n\u001b[1;32m      3\u001b[0m res \u001b[38;5;241m=\u001b[39m left\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(left \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m, right \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m):\n\u001b[0;32m----> 5\u001b[0m     res \u001b[38;5;241m=\u001b[39m res \u001b[38;5;241m&\u001b[39m i\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m res\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def rangeBitwiseAnd(self, left, right):\n",
+    "        res = left\n",
+    "        for i in range(left + 1, right + 1):\n",
+    "            res = res & i\n",
+    "        return res\n",
+    "\n",
+    "left = 1\n",
+    "right = 2147483647\n",
+    "ans = Solution()\n",
+    "ans.rangeBitwiseAnd(left, right)"
    ]
   },
   {
