--- a/1BasicAlogrithm/8.HighLevel.ipynb
+++ b/1BasicAlogrithm/8.HighLevel.ipynb
@@ -1817,9 +1817,417 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c78cf9a2-a053-427d-9681-15abf0f74f6a",
+   "metadata": {},
+   "source": [
+    "# 35 167. 两数之和 II - 输入有序数组\n",
+    "https://leetcode.cn/problems/two-sum-ii-input-array-is-sorted/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 760,
+   "id": "66810a7d-4860-48eb-814e-9bc958fdfd35",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2]"
+      ]
+     },
+     "execution_count": 760,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from itertools import combinations\n",
+    "class Solution:\n",
+    "    def twoSum(self, numbers, target):\n",
+    "        s = combinations(numbers, 2)\n",
+    "        for i in s:\n",
+    "            if sum(i) == target:\n",
+    "                i = list(i)\n",
+    "                sorted(i)\n",
+    "                a = numbers.index(i[0])\n",
+    "                b = numbers.index(i[1], a + 1)\n",
+    "                return [a+1, b+1]\n",
+    "                \n",
+    "numbers = [2,7,11,15]\n",
+    "target = 9\n",
+    "#numbers = [2,3,4]\n",
+    "#target = 6\n",
+    "#numbers = [-1,0]\n",
+    "#target = -1\n",
+    "#numbers = [0,0,3,4]\n",
+    "#target = 0\n",
+    "ans = Solution()\n",
+    "ans.twoSum(numbers, target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 765,
+   "id": "63bd9d85-dccc-43f2-9860-9e2d3e1a4e37",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2)"
+      ]
+     },
+     "execution_count": 765,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def twoSum(self, numbers, target):\n",
+    "        i, j = 0, len(numbers) -1\n",
+    "        while i < j:\n",
+    "            s = numbers[i] + numbers[j]\n",
+    "            if s > target:  j -= 1\n",
+    "            elif s < target: i += 1\n",
+    "            else: return i + 1, j + 1\n",
+    "        return []\n",
+    "                \n",
+    "numbers = [2,7,11,15]\n",
+    "target = 9\n",
+    "numbers = [2,3,4]\n",
+    "target = 6\n",
+    "numbers = [-1,0]\n",
+    "target = -1\n",
+    "numbers = [0,0,3,4]\n",
+    "target = 0\n",
+    "ans = Solution()\n",
+    "ans.twoSum(numbers, target)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "161cd2d4-6226-4403-bb40-fd85041f3fa2",
+   "metadata": {},
+   "source": [
+    "# 36 229. 多数元素 II\n",
+    "https://leetcode.cn/problems/majority-element-ii/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 773,
+   "id": "b1385b8f-15bb-43e9-8c8d-6e146cd41690",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3]"
+      ]
+     },
+     "execution_count": 773,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "class Solution:\n",
+    "    def majorityElement(self, nums):\n",
+    "        n = len(nums)\n",
+    "        res = []\n",
+    "        s = Counter(nums)\n",
+    "        for i in s:\n",
+    "            if s[i] > n/3:\n",
+    "                res.append(i)\n",
+    "        return res\n",
+    "        \n",
+    "        \n",
+    "nums = [1,2]\n",
+    "nums = [1]\n",
+    "nums = [3,2,3]\n",
+    "ans = Solution()\n",
+    "ans.majorityElement(nums)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15caab62-6e82-4285-ada5-0f82b152a8ac",
+   "metadata": {},
+   "source": [
+    "# 37 260. 只出现一次的数字 III\n",
+    "\n",
+    "https://leetcode.cn/problems/single-number-iii/description/"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b637041d-8f4d-4542-b50e-e948195deae7",
+   "id": "4b166554-4373-4a01-a724-f8782ddd7b27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter\n",
+    "class Solution:\n",
+    "    def singleNumber(self, nums):\n",
+    "        s = Counter(nums)\n",
+    "        res = []\n",
+    "        for i in s:\n",
+    "            if s[i] == 1:\n",
+    "                res.append(i)\n",
+    "        return res\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5a3d60a-97b4-490d-a92b-543cfe8cbd20",
+   "metadata": {},
+   "source": [
+    "# 38  1828. 统计一个圆中点的数目\n",
+    "\n",
+    "https://leetcode.cn/problems/queries-on-number-of-points-inside-a-circle/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 785,
+   "id": "92dda619-e697-4fd2-8cc5-7c25f04cc775",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3, 2, 4]"
+      ]
+     },
+     "execution_count": 785,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "class Solution:\n",
+    "    def countPoints(self, points, queries):\n",
+    "        def dist(a, b):\n",
+    "            d = np.sqrt((a[0] - b[0]) ** 2 + (a[1] - b[1]) ** 2)\n",
+    "            return d\n",
+    "        res = []\n",
+    "        for i in queries:\n",
+    "            ans = 0\n",
+    "            r = i[2]\n",
+    "            for j in points:\n",
+    "                if dist(i[:2], j) <= r:\n",
+    "                    ans += 1\n",
+    "            res.append(ans)\n",
+    "        return res\n",
+    "\n",
+    "points = [[1,3],[3,3],[5,3],[2,2]]\n",
+    "queries = [[2,3,1],[4,3,1],[1,1,2]]\n",
+    "points = [[1,1],[2,2],[3,3],[4,4],[5,5]]\n",
+    "queries = [[1,2,2],[2,2,2],[4,3,2],[4,3,3]]\n",
+    "ans = Solution()\n",
+    "ans.countPoints(points, queries)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec57995e-e725-444c-9845-5e0d4344aa42",
+   "metadata": {},
+   "source": [
+    "# 39 2396. 严格回文的数字\n",
+    "https://leetcode.cn/problems/strictly-palindromic-number/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 793,
+   "id": "c775a066-bc2b-4462-800e-be4436e37854",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def isStrictlyPalindromic(self, n):\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8eb8caf2-ba8b-4448-a672-1d8ec12edc26",
+   "metadata": {},
+   "source": [
+    "# 40 1769. 移动所有球到每个盒子所需的最小操作数\n",
+    "\n",
+    "https://leetcode.cn/problems/minimum-number-of-operations-to-move-all-balls-to-each-box/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 799,
+   "id": "1f108c45-9070-440c-8fc6-07aa594ec491",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[11, 8, 5, 4, 3, 4]"
+      ]
+     },
+     "execution_count": 799,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def minOperations(self, boxes):\n",
+    "        s = [int(i) for i in boxes]\n",
+    "        res = []\n",
+    "        for i in range(len(s)):\n",
+    "            temp = 0\n",
+    "            for j in range(len(s)):\n",
+    "                if i != j:\n",
+    "                    temp += s[j] * abs(j - i)\n",
+    "            res.append(temp)\n",
+    "        return res\n",
+    "\n",
+    "boxes = \"110\"\n",
+    "boxes = \"001011\"\n",
+    "ans = Solution()\n",
+    "ans.minOperations(boxes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "576a4ea9-56be-4125-bcbd-d8fcaa6fe110",
+   "metadata": {},
+   "source": [
+    "# 41 2545. 根据第 K 场考试的分数排序\n",
+    "https://leetcode.cn/problems/sort-the-students-by-their-kth-score/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 826,
+   "id": "e2b39922-7c70-42fd-8341-15c5ee860fd4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[5, 6], [3, 4]]"
+      ]
+     },
+     "execution_count": 826,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "class Solution:\n",
+    "    def sortTheStudents(self, score, k):\n",
+    "        arr = np.array(score)\n",
+    "        new_arr=arr[np.argsort(arr[:,k])]\n",
+    "        return new_arr[::-1].tolist()\n",
+    "\n",
+    "score = [[10,6,9,1],[7,5,11,2],[4,8,3,15]]\n",
+    "k = 2\n",
+    "score = [[3,4],[5,6]]\n",
+    "k = 0\n",
+    "ans = Solution()\n",
+    "ans.sortTheStudents(score, k)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a16d68a-5c5b-431a-bbf6-742d3a367187",
+   "metadata": {},
+   "source": [
+    "# 42 2433. 找出前缀异或的原始数组\n",
+    "https://leetcode.cn/problems/find-the-original-array-of-prefix-xor/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 839,
+   "id": "250cd785-eebd-494c-b89b-347e2e94330d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[13]"
+      ]
+     },
+     "execution_count": 839,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def findArray(self, pref):\n",
+    "        res = [pref[0]]\n",
+    "        for i in range(1, len(pref)):\n",
+    "            print(res[-1], pref[i])\n",
+    "            res.append(pref[i] ^ pref[i-1])\n",
+    "        return res\n",
+    "\n",
+    "pref = [5,2,0,3,1]\n",
+    "pref = [13]\n",
+    "ans = Solution()\n",
+    "ans.findArray(pref)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ea27508-6198-4776-9d7b-3cd9d9fc1e9a",
+   "metadata": {},
+   "source": [
+    "# 43 LCR 079. 子集\n",
+    "https://leetcode.cn/problems/TVdhkn/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 844,
+   "id": "70bed729-5aa4-470f-ac7c-d72c4c7fa23c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[], [1], [2], [3], [1, 2], [1, 3], [2, 3], [1, 2, 3]]"
+      ]
+     },
+     "execution_count": 844,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from itertools import combinations\n",
+    "class Solution:\n",
+    "    def subsets(self, nums):\n",
+    "        res = [[]]\n",
+    "        for i in range(1, len(nums) + 1):\n",
+    "            for j in combinations(nums, i):\n",
+    "                res.append(list(j))\n",
+    "        return res\n",
+    "        \n",
+    "nums = [1,2,3]\n",
+    "ans = Solution()\n",
+    "ans.subsets(nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2222e66-360e-4963-81cd-b8bb57921728",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1827,7 +2235,165 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ce196c4-f592-4e52-b803-2ba859476e95",
+   "id": "72233c72-a9ff-42f8-a9b7-ac7011fbabad",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f9b6fc1-52e0-44f8-8847-2052ed904864",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e8a2fe6-e8af-4238-94b7-dcd0ae2cbe7b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c7eb3bd-f7e7-48da-a684-fc4554c63a99",
+   "metadata": {},
+   "source": [
+    "2391. 收集垃圾的最少总时间\n",
+    "https://leetcode.cn/problems/minimum-amount-of-time-to-collect-garbage/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 817,
+   "id": "6b37dd6c-b606-4c06-8677-394ff36e4f6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(6)"
+      ]
+     },
+     "execution_count": 817,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "class Solution:\n",
+    "    def garbageCollection(self, garbage, travel):\n",
+    "        s = [[i.count(\"P\"), i.count(\"M\"), i.count(\"G\")] for i in garbage]\n",
+    "        s1 = np.array(s)\n",
+    "        n= len(garbage)\n",
+    "        res = s1.sum()\n",
+    "        res += travel[0] * \n",
+    "        print(n - s1[:, 0].tolist()[::-1].index(1))\n",
+    "        \n",
+    "        return res\n",
+    "\n",
+    "garbage = [\"G\",\"P\",\"GP\",\"GG\"]\n",
+    "travel = [2,4,3]\n",
+    "ans = Solution()\n",
+    "ans.garbageCollection(garbage,travel)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2e5463f-f750-4801-8bad-b801aa41b2e5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd07fe1f-719b-40b7-b345-39a7cd96b69d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20e01e96-b473-4f1c-a37e-3b74117eb069",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2103d837-5d61-4e1e-831d-cb99921b41a5",
+   "metadata": {},
+   "source": [
+    "# \n",
+    "166. 分数到小数\n",
+    "https://leetcode.cn/problems/fraction-to-recurring-decimal/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 770,
+   "id": "90aa5fa8-4883-4a9d-b330-c3266c894486",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.42857142857142855\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def fractionToDecimal(self, numerator, denominator):\n",
+    "        s = numerator / denominator\n",
+    "        print(s)\n",
+    "\n",
+    "numerator = 1\n",
+    "denominator = 2\n",
+    "numerator = 2\n",
+    "denominator = 1\n",
+    "numerator = 4\n",
+    "denominator = 333\n",
+    "numerator = 3\n",
+    "denominator = 7\n",
+    "ans = Solution()\n",
+    "ans.fractionToDecimal(numerator, denominator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "acd892ba-3df7-4017-b2cf-e1a07b359e9d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2a6e5a9-a357-405b-b2ee-b37b7f31c71d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d2778b2-ff19-463e-b144-b69e09619659",
    "metadata": {},
    "outputs": [],
    "source": []
